@@ -1,3 +1,11 @@
+2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokeravatar.py.in
+	(PokerAvatarTestCase.variousStartPackets): Adjusted now that bug
+	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.
+	(PokerAvatarTestCase.requestsWithWrongSerial): Adjusted now that bug
+	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.
+
 2008-07-05  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokerrenderer.py.in (PokerFactoryMockup.getMessages):
